{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "d4f75e24-bd91-4467-a611-a48b13ddfdb5",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a941d3f5-66c0-4e74-ba5c-496ffe31aea6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouvement",
                    "type": "Value",
                    "id": "57924d64-fb56-49b2-ab95-aabd813104fa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PowerUp",
                    "type": "Button",
                    "id": "154de404-14f8-4c53-8f84-ca2c41c44079",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "228a6078-f604-46a4-a643-0320972fc280",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a96329b-766e-4ad0-8dfc-842217453854",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a8c7356-feef-49cf-912d-2641eb434ea4",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PowerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Metronome",
            "id": "a37dd11d-f67c-4a45-8e35-c06e34d09db6",
            "actions": [
                {
                    "name": "Active",
                    "type": "Button",
                    "id": "262bff9e-8e22-4a2e-a958-6d3c1c2067e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PiegeUp",
                    "type": "Value",
                    "id": "88712e7b-b43d-4818-8e58-b65831e3422a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PiegeRight",
                    "type": "Value",
                    "id": "7977f564-f3b6-4179-9885-d923a924f7cc",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PiegeDown",
                    "type": "Value",
                    "id": "ee3709d9-a12e-43a8-b13b-88fe7304019d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PiegeLeft",
                    "type": "Value",
                    "id": "eff89c44-d91b-42b2-8b36-db3a08576bee",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PiegeMove",
                    "type": "Value",
                    "id": "e9f5ddf2-b4ca-4edd-bc2d-a9d06eef359a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PiegeActive",
                    "type": "Button",
                    "id": "6286e3d7-98b4-487d-b094-18b9705c9a53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a2ea1487-27fb-4a65-9aeb-fbd394563c6c",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Active",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fcc6edab-a6d4-46fb-be89-2777b9abad54",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PiegeUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f8d5484-73a0-4045-8d37-19c89f0691c4",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PiegeRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bc2950e-c5b7-4b8c-828b-a038cf9ae8e2",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PiegeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60b737ba-ba94-44a2-8d32-67422b306956",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PiegeMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0da2d338-307a-480b-b7b0-c2a533572d95",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PiegeActive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7aeeec59-2897-4379-b97e-b3c37323cebf",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PiegeDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UIControler",
            "id": "9c48587b-351c-4aaa-a536-1fec7f57bfdf",
            "actions": [
                {
                    "name": "UIMove",
                    "type": "Value",
                    "id": "e739a45e-c2b4-457b-84d0-b26e2e3cdca5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UIValide",
                    "type": "Button",
                    "id": "a3a9ae62-bb61-410a-9f8c-153e60f25220",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UICancel",
                    "type": "Button",
                    "id": "4f59625f-c7d4-492a-9d13-513a3ad28a70",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "68b0a52f-ae8a-492e-b0ba-435ed796a917",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "874dd4c3-fda5-444a-b999-1b9ed21c9f6a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UIValide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f482e23-8aa1-45c4-87b6-adceb0e66f06",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UICancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}